# autoPapers

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
autopapers/: __init__.py  cli.py  config.py  config_planner.py  http.py  llm.py  models.py  obsidian.py  pipeline.py  settings.py  state.py  utils.py
autopapers/fetchers/: __init__.py  arxiv.py  openreview.py
tests/: __init__.py  test_config.py  test_config_planner.py  test_fetchers.py  test_http.py  test_llm.py  test_obsidian.py  test_pipeline.py  test_settings.py
tests/fixtures/: arxiv_sample.xml  openreview_sample.json
